// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | List Basic ordered list 1`] = `
<ol
  className="List__BaseList-sc-67l9u3-0 cLiOUp"
>
  <li
    className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
  >
    List item 1
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
  >
    List item 2
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
  >
    List item 3
  </li>
</ol>
`;

exports[`Storyshots Atoms | List Basic unordered list 1`] = `
<ul
  className="List__BaseList-sc-67l9u3-0 cLiOUp"
>
  <li
    className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
  >
    List item
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
  >
    List item
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
  >
    List item
  </li>
</ul>
`;

exports[`Storyshots Atoms | List With separators between each li 1`] = `
<ul
  className="List__BaseList-sc-67l9u3-0 czDDwy"
>
  <li
    className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
  >
    List item 1
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
  >
    List item 2
  </li>
  <li
    className="ListItem__StyledListItem-pn91gs-0 eAAaLc"
  >
    List item 3
  </li>
</ul>
`;
